--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+  margin-bottom: 16px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -14,7 +15,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #efcec5;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -24,8 +25,12 @@
   color: white;
 }
 
+p {
+  font-family: 'Indie Flower';
+}
+
 .App-link {
-  color: #61dafb;
+  color: #fff;
 }
 
 @keyframes App-logo-spin {
