feature: update loading state

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 }
 
 .App-header {
-  background-color: #efcec5;
+  background-color: #da9986;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
